--- a/styles.css
+++ b/styles.css
@@ -22,24 +22,26 @@
     align-items: center;
     justify-content: space-between;
   }
+
   .image-perfil {
-    margin: 10px;
-  }
-  .image-perfil, img {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    margin: 20px;
+    margin: 10px;
+    align-items: center;
   }
+
   .datos-principales {
     min-height: 250px;
     text-align: center;
   }
+
   .datos-principales, h1 {
     color: #4f7bf3;
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: bold;
   }
+
   h2 {
     color: #9cbbba;
     font-family: "Trebuchet MS", sans-serif;
@@ -211,11 +213,10 @@
   .icons-redes a:hover i {
     color: black;
   }
-  .derechos-autor {
-    font-size: 15px;
-    color: #aeaeae;
-    padding: 20px;
-    margin-top: 30px;
+
+  .logo {
+    width: 55px;
+    height: 55px;
   }
   
   /*media quory*/
