--- a/styles.css
+++ b/styles.css
@@ -14,20 +14,58 @@
   }
   
   /*header*/
-  .navbar {
-    padding: 2rem;
-    background-color: #fcf6d3;
+
+  #sidebar {
+    position: fixed;
+    background-color: #e6cb81;
+    width: 220px;
+    height: 100%;
+    left: -220px;
+    transition: all 350ms linear;
   }
-  .navbar-collapse {
-    align-items: center;
-    justify-content: space-between;
+
+  #sidebar.active {
+    left: 0px;
+  }
+
+  #sidebar .toggle-btn {
+    position: absolute;
+    left: 250px;
+    top: 20px;
+    cursor: pointer;
+  }
+
+  #sidebar .toggle-btn span {
+    display: block;
+    width: 40px;
+    text-align: center;
+    font-size: 30px;
+    border: solid 1px black;
+    border-radius: 20%;
+  }
+
+  .sidebar-element{
+    color: #271433;
+    text-align: center;
+    border-bottom: 2px solid rgb(85, 20, 105);
+    font-family: 'Trebuchet MS', sans-serif;
+    list-style: none;
+  }
+
+  #primero {
+    border-top: 2px solid rgb(85, 20, 105);
+  }
+
+  #menu-icono {
+    width: 30px;
+    height: auto;
   }
 
   .image-perfil {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    margin: 10px;
+    margin: 30px 15px 15px 15px;
     align-items: center;
   }
 
@@ -40,6 +78,7 @@
     color: #4f7bf3;
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: bold;
+    margin: 12px;
   }
 
   h2 {
@@ -102,6 +141,7 @@
     border-radius: 5px;
     padding: 40px 40px 40px 40px;
     margin: 100px;
+    box-shadow: 5px white;
   }
 
   h4 {
@@ -139,7 +179,8 @@
   .contact .rectangulo {
     background-color: black;
     border-radius: 10px;
-    box-shadow: 0px 1px 4px 1px white;
+    margin: 20px;
+    box-shadow: 0px 2px 6px 2px white;
   }
   .contact .row {
     width: 100%;
@@ -217,6 +258,7 @@
   .logo {
     width: 55px;
     height: 55px;
+    border-radius: 70px;
   }
   
   /*media quory*/
